--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tinymce/tinymce-react": "^4.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
